<resources>
    <string name="app_name">Foodjasera</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_home">Beranda</string>
    <string name="tab_history">Riwayat</string>
    <string name="tab_account">Akun</string>
    <string name="menu_history">Riwayat Pemesanan</string>
    <string name="menu_akun">Pengaturan Akun</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="belum_punya_akun">Belum punya akun ? Daftar di sini</string>

    //button
    <string name="btn_login">Masuk</string>
    <string name="btn_register">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="sudah_punya_akun">Sudah punya akun ? Masuk di sini</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="kembali_ke_login">Kembali ke login</string>

    <string name="google_maps_api_key">AIzaSyAStE19dqxWBl2yKPKc09yUrHoExkZMTLA</string>
</resources>
